fix: coloquei overflow-x: hidden

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 }
 
 body {
+  overflow-x: hidden;
   min-height: 100vh;
   background-image: linear-gradient(to right, black, rgb(55, 39, 20));
   font-family: "Poppins", Arial, Helvetica, sans-serif;
